# eei-global

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: CERES_EBAF-TOA_Ed4.2.1_200003-202601.nc  CERES_EBAF_Ed4.2.1_Subset_200003-202512.nc  CMIP.nc  HadAM3.nc  berkeley.txt
data/CMIP/: clear_CAM4_Cooper-piForcing.nc  clear_CAM5_Cooper-piForcing.nc  clear_CAM6_Cooper-piForcing.nc  clear_CNRM-CM6-1_piClim-histall_r1i1p1f2.nc  clear_CanESM5_piClim-histall_r1i1p2f1.nc  clear_GFDL-CM4_piClim-histall_r1i1p1f1.nc  clear_GISS-E2-1-G_piClim-histall_r1i1p1f1.nc  clear_HadAM3_Cooper-piForcing.nc  clear_HadAM3_amip-piForcing.nc  clear_HadGEM3-GC31-LL_piClim-histall_r1i1p1f3.nc  clear_HadGEM3_HadISST1-piForcing.nc  clear_IPSL-CM6A-LR_piClim-histall_r1i1p1f1.nc  clear_MIROC6_piClim-histall_r1i1p1f1.nc  clear_NorESM2-LM_piClim-histall_r1i1p1f1.nc  cre_CAM4_Cooper-piForcing.nc  cre_CAM5_Cooper-piForcing.nc  cre_CAM6_Cooper-piForcing.nc  cre_CNRM-CM6-1_piClim-histall_r1i1p1f2.nc  cre_CanESM5_piClim-histall_r1i1p2f1.nc  cre_GFDL-CM4_piClim-histall_r1i1p1f1.nc  cre_GISS-E2-1-G_piClim-histall_r1i1p1f1.nc  cre_HadAM3_Cooper-piForcing.nc  cre_HadAM3_amip-piForcing.nc  cre_HadGEM3-GC31-LL_piClim-histall_r1i1p1f3.nc  cre_HadGEM3_HadISST1-piForcing.nc  cre_IPSL-CM6A-LR_piClim-histall_r1i1p1f1.nc  cre_MIROC6_piClim-histall_r1i1p1f1.nc  cre_NorESM2-LM_piClim-histall_r1i1p1f1.nc  lw_CAM4_Cooper-piForcing.nc  lw_CAM5_Cooper-piForcing.nc  lw_CAM6_Cooper-piForcing.nc  lw_CNRM-CM6-1_piClim-histall_r1i1p1f2.nc  (+94 more)
eei-global/: gregory_2.py  trend_overview.py  world_cre_vs_cld.py
(+4 files in other folders)
